--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!--
 <ul class="posts-list">
   
   {% assign category = page.category | default: page.title %}
@@ -16,3 +17,9 @@ layout: default
   {% endfor %}
   
 </ul>
+-->
+{{ content }}
+
+<div class="entries-{{ page.entries_layout }}">
+  {% include posts-category.html taxonomy=page.taxonomy type=page.entries_layout %}
+</div>
