--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -25,7 +25,7 @@ layout: archive
   {% endfor %}
 </ul>
 
-<!--
+
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
@@ -41,4 +41,4 @@ layout: archive
       </section>
     {% endif %}
   {% endfor %}
-{% endfor %} -->
+{% endfor %} 
