--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,3 +3,5 @@
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
+
+<link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap&text=Nithiya%20Streethran" rel="stylesheet" type="text/css">
