--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,4 +4,4 @@
 
 <!-- end custom head snippets -->
 
-<link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap&text=Nithiya%20Streethran" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
