--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,6 +21,6 @@
 }
 */
 .site-title{
-  font-family: "La Belle Aurore", cursive;
+  font-family: 'Dancing Script', cursive;
   font-size: larger;
 }
