--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,19 +7,19 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
 
 .archive a{
     color: inherit;
     text-decoration: none;
 }
-
-
+/*
  h1, h2, h3, h4, h5, h6,
 .sidebar .author__name, .toc .nav__title, .mfp-counter,
 .taxonomy__index strong, .page__taxonomy-item {
   font-family: $monospace;
 }
-
+*/
 .site-title{
   font-family: 'Dancing Script', cursive;
   
