--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,3 +5,5 @@
 <!-- end custom head snippets -->
 
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+
+<img src="/assets/images/header.jpg"/>
