--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,8 @@
     {% include head/custom.html %}
   </head>
   
+  <img src="/assets/images/header.jpg"/>
+  
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
     {% include_cached skip-links.html %}
     {% include_cached browser-upgrade.html %}
