--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     {% include head/custom.html %}
   </head>
   
-  <img src="/assets/images/header.jpg"/>
+  <img src="/assets/images/header.jpg" height="500"/>
   
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
     {% include_cached skip-links.html %}
