--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     {% include_cached browser-upgrade.html %}
     {% include_cached masthead.html %}
     
-    <img src="/assets/images/header.jpg" height="60" width="1600"/>
+    <img src="/assets/images/header.jpg" height="50" width="1200" align="center"/>
 
     <div class="initial-content">
       {{ content }}
