--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,10 @@
     {% include_cached browser-upgrade.html %}
     {% include_cached masthead.html %}
     
-    <img src="/assets/images/header.jpg" height="40" width="1200" align="center"/>
-
+    <div style="text-align:center;">
+      <img src="/assets/images/header.jpg" height="40" width="1200"/>
+    </div>
+    
     <div class="initial-content">
       {{ content }}
     </div>
