--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     {% include_cached masthead.html %}
     
     <div style="text-align:center;">
-      <img src="/assets/images/header.jpg" width="1280px"/>
+      <img src="/assets/images/header.jpg" />
     </div>
     
     <div class="initial-content">
