--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,8 @@
     {% include_cached browser-upgrade.html %}
     {% include_cached masthead.html %}
     
-    <div style="text-align:center;">
-      <img src="/assets/images/header.jpg" />
-    </div>
+ 
+    <img src="/assets/images/header.jpg" align="center" height="30"/>
     
     <div class="initial-content">
       {{ content }}
