--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     {% include_cached masthead.html %}
     
  
-    <img src="/assets/images/header.jpg" align="center" height="20"/>
+    <img src="/assets/images/header2.jpg" align="center" height="20"/>
     
     <div class="initial-content">
       {{ content }}
