--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,10 @@
 ---
-layout: archive
+layout: single
 ---
 
 {{ content }}
+
+<img src="/assets/images/header.jpg" align="center" height="20"/>
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
