--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 header:
-      image: /assets/images/header.jpg
+      image: assets/images/header.jpg
 ---
 <!--
 <img src="/assets/images/header.jpg" align="center" height="20"/>
