--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,5 @@
 ---
-layout: archive
-header.image: assets/images/header.jpg
+layout: single
 ---
 
 <img src="/assets/images/header.jpg" align="center" height="20"/>
