--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,10 @@
 ---
-layout: single
+layout: archive
 ---
 
-<img src="/assets/images/header.jpg" align="center" height="20"/>
-
 {{ content }}
+
+<img src="/assets/images/header.jpg" align="center" height="20"/>
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
