--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,16 @@
 layout: archive
 ---
 
+.header-image::after{
+  background-image: url("/assets/images/header.jpg");
+  background-position: center;
+}
+
 {{ content }}
 
+<!--
 <img src="/assets/images/header.jpg" align="center" height="20"/>
+-->
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
