--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: archive
 ---
 
-.header-image::after{
+.hero-image{
   background-image: url("/assets/images/header.jpg");
   background-position: center;
 }
