--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,17 +1,9 @@
 ---
 layout: archive
 ---
+<div class="header-img"></div>
 
-.hero-image{
-  background-image: url("/assets/images/header.jpg");
-  background-position: center;
-}
-
-{{ content }}
-
-<!--
-<img src="/assets/images/header.jpg" align="center" height="20"/>
--->
+{{ content }}  
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
