--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,10 @@
 ---
 layout: archive
-header:
-      overlay_image: /assets/images/header.jpg
 ---
-<!--
-<div class="header-img"></div>
--->
+
+<div>
+  <img src="/assets/images/header.jpg"/>
+</div>
 
 {{ content }}  
 
