--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: archive
 ---
 
 <div>
-  <img src="/assets/images/header.jpg"/>
+  <img src="/assets/images/header.jpg"/ height=100% width="1280px">
 </div>
 
 {{ content }}  
