--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -15,6 +15,10 @@ layout: default
 {% endif %}
 
 <div id="main" role="main">
+  <div>
+  <img src="/assets/images/header.jpg"/ height=100% width="1280px">
+  </div>
+  
   {% include sidebar.html %}
 
   <div class="archive">
