--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -16,7 +16,7 @@ layout: default
 
 <div id="main" role="main">
   <div>
-  <img src="/assets/images/header.jpg" height=100% width=100% />
+  <img src="/assets/images/header.jpg" height="300px" width="1280px" />
   </div>
   
   {% include sidebar.html %}
